pkg/test/resources/tools-resources/chaos/fio_deployment_pvc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fio
  labels:
    app: fio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fio
  template:
    metadata:
      labels:
        app: fio
    spec:
      containers:
      - name: fio
        image: joshuarobinson/fio:3.19
        command: ["sh"]
        args: ["-c", "echo ${HOSTNAME} && mkdir -p /scratch/${HOSTNAME} && fio /configs/fio.job --eta=never --directory=/scratch/${HOSTNAME}"]
        volumeMounts:
        - name: fio-config-vol
          mountPath: /configs
        - name: fio-data
          mountPath: /scratch
        imagePullPolicy: Always
      restartPolicy: Always
      volumes:
      - name: fio-config-vol
        configMap:
          name: fio-job-config
      - name: fio-data
        persistentVolumeClaim:
          claimName: fio-claim
