pkg/test/resources/tools-resources/chaos/block-dns-nwp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-egress
  namespace: gadget
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Egress
